# mcp_demo

./: .dockerignore  .gitignore  Dockerfile  README.md  elevenlabs-prompt.txt  main.py  pyproject.toml  riddles.json
infra/: cloud-init.yml  cloudflare.tf  google.tf  main.tf
scripts/: README.md  auth_token.py  crpt_helper.py  push_docker_image.sh  ssl_certificate.sh
src/lib/: auth.py  ip_whitelist.py  session_storage.py
src/services/: authorization_server.py  riddle_mcp.py  weather_mcp.py
src/static/: city_coords.json
