[project]
name = "mcp-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asgi-ratelimit>=0.10.0",
    "cryptography>=45.0.5",
    "mcp[cli]>=1.12.0",
    "pyjwt>=2.10.1",
]

[project.optional-dependencies]
dev = [
    "acme>=4.1.1",
    "certbot>=4.1.1",
    "certbot-dns-cloudflare>=4.1.1",
]
